# dhcomp

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  test.py  tox.ini
.github/workflows/: python-package.yml  python-publish.yml
dhcomp/: composite.py
src/: composite.py
src/pydhc/: composite.py
tests/: test_composite.py
