[tool.poetry]
name = "pydhc"
version = "0.1.3"
description = "Simple utility to composite drill hole data in python"
authors = ["Ben <ben@fractalgeoanalytics.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
