[tool.poetry]
name = "dhcomp"
version = "0.3.1"
description = "Simple utility to composite drill hole data in python"
authors = ["Ben <ben@fractalgeoanalytics.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "dhcomp"}]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.21"
pandas = "*"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tox]
isolated_build = true