[project]
name = 'dhcomp'
version = '0.4.7'
description = 'Simple utility to composite drill hole data in python'
license = 'MIT'
readme = 'README.md'
dependencies = ['numpy','pandas','networkx']


[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project.optional-dependencies]
dev = ['black']

[tox]
isolated_build = true

[author]
author='Ben Chi'
url='https://github.com/FractalGeoAnalytics/dhcomp'
author_email='ben@fractalgeoanalytics.com'
